# fastapi-observable

./: .dockerignore  .env.example  ARCHITECTURE.md  BEST_PRACTICES_GUIDE.md  COMPLETION_SUMMARY.txt  Dockerfile  ENHANCEMENT_SUMMARY.md  ENHANCEMENT_VALIDATION_CHECKLIST.md  FILES_CHANGED.md  INDEX.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  README_ENHANCEMENTS.md  START_HERE.md  locustfile.py  main.py  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  logger.py  main.py  observability.py  schemas.py
app/health/: config.py  constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
app/observability_endpoints/: config.py  constants.py  router.py  schemas.py  service.py
k8s/: deployment.yaml  fluent-bit-parser.conf  prometheus-config-snippet.yaml  secret.yaml
scripts/: format.sh  uv_setup.sh
tests/: conftest.py
tests/health/: test_router.py
