[project]
name = "fastapi-observable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-exporter-prometheus>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "locust>=2.42.6",
]
